@@ -3,11 +3,15 @@ parts =
     test
     coverage-test
     coverage-report
-develop = .
+develop =
+    .
+    mr.developer.addon
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = mr.developer
+eggs =
+    mr.developer
+    mr.developer.addon
 defaults = ['-v', '-c', '-1']
 
 [coverage-test]
