@@ -1,0 +1,1 @@
+from mr.developer.svn import SVNWorkingCopy
