@@ -100,5 +100,3 @@ class BazaarWorkingCopy(common.BaseWorkingCopy):
             raise BazaarError(
                 "Can't update package %r because it's dirty." % name)
         return self.bzr_pull(**kwargs)
-
-common.workingcopytypes['bzr'] = BazaarWorkingCopy
